# uaudtcodec

./: .gitignore  LICENSE  README.md  pyproject.toml
src/uaudtcodec/: __init__.py  _constants.py  _decoder.py  _encoder.py  _handler.py  _parser.py  _types_registry.py  _utils.py
