[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uaudtcodec"
version = "1.0.0"
description = "Generic OPC-UA structured type encoder/decoder from XML type dictionaries"
license = {text = "Apache-2.0"}
authors = [{name = "PaulLosson"}]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "lxml",
]

[project.optional-dependencies]
opcua = ["asyncua"]

[tool.setuptools.packages.find]
where = ["src"]
